scrolling page fixed (overflow: hidden - removed)

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@ body {
     padding: 0;
     text-shadow: 1.5px 1.5px 0 rgba(0, 0, 0, 0.3);
     font-family: 'Lato', sans-serif;
-    overflow: hidden;
 }
 
 h3 {
